# resources/user/controller.js
@@ -1,6 +1,9 @@
 import UserModel from './model.js';
 import { generateToken } from '../../utils/auth.js';
-import { userDashboard, titulosUpload } from './services.js';
+import { userDashboard, titulosCarga, cambioDeClave } from './services.js';
+import Mailgun from 'mailgun.js';
+import formData from 'form-data';
+const mailgun = new Mailgun(formData);
 
 export const UserController = {
   create(req, res) {
@@ -93,6 +96,75 @@ export const dashboard = async (req, res) => {
 
 export const cargar_titulos = async (req, res) => {
   try {
-    const date = await titulosUpload(req);
+    const date = await titulosCarga(req);
   } catch (error) {}
+};
+
+export const olvido_clave = async (req, res) => {
+  try {
+    const user = await UserModel.findOne({ email: req.body.email }).exec();
+    const token = generateToken(user);
+    const mg = mailgun.client({
+      username: 'api',
+      key: process.env.MAILGUN_API_KEY,
+    });
+    const data = {
+      from: 'No Responder <mailgun@sandboxb982d00d7b334ebda4bab10136ebd10d.mailgun.org>', // Dirección de correo desde donde se enviará
+      to: req.body.email, // Correo electrónico del destinatario
+      subject: 'Solicitud de Cambio de Contraseña', // Asunto del correo
+      html: `
+        <h1>Solicitud de Cambio de Contraseña</h1>
+        <p>Hemos recibido una solicitud para cambiar la contraseña de tu cuenta.</p>
+        <p>Si no solicitaste un cambio de contraseña, por favor ignora este correo.</p>
+        <p>Haz clic en el enlace de abajo para cambiar tu contraseña:</p>
+        <a href="https://${process.env.URL_LINK}/cambiar-contraseña?token=${token}">Cambiar mi contraseña</a>
+      `,
+    };
+    // Enviar el correo electrónico usando Mailgun
+    mg.messages
+      .create('sandboxb982d00d7b334ebda4bab10136ebd10d.mailgun.org', data)
+      .then((body) => {
+        console.log('Correo enviado: ', body);
+        return res.status(200).json({ message: 'Correo Enviado' });
+      })
+      .catch((err) => {
+        console.error('Error al enviar el correo: ', err);
+        return res.status(500).json({ message: 'Error al enviar el correo.' });
+      });
+  } catch (error) {
+    console.error('Error en enviarCorreoCambioContraseña: ', error);
+    return res.status(error.statusCode || 400).json({ message: error });
+  }
+};
+
+export const cambiar_clave = async (req, res) => {
+  try {
+    const { token, nuevaClave } = req.body;
+
+    const response = await cambioDeClave(token, nuevaClave);
+
+    // Enviar respuesta de éxito
+    res.status(200).json({ message: 'Contraseña cambiada exitosamente.' });
+  } catch (err) {
+    console.error('Error al cambiar la contraseña:', err);
+
+    // Verificar si el error es un Token inválido o expirado
+    if (err.name === 'JsonWebTokenError') {
+      return res.status(400).json({ error: 'Token inválido.' });
+    }
+
+    if (err.name === 'TokenExpiredError') {
+      return res.status(400).json({ error: 'El token ha expirado.' });
+    }
+
+    // Manejo de errores específicos de base de datos
+    if (err.name === 'MongoError' || err.name === 'MongooseError') {
+      return res.status(500).json({
+        error: 'Error en la base de datos. Por favor, inténtelo de nuevo.',
+      });
+    }
+
+    // Manejo de cualquier otro error no especificado
+    return res.status(500).json({ error: 'Error interno del servidor.' });
+  }
 };
